--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.38MB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-631.1KB/s(Youtube:不良林), server: 120.233.150.146, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-1.09MB/s(Youtube:不良林), server: 120.233.29.189, port: 65071, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
-  - {name: 🇨🇦 加拿大-362.9KB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.61MB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-5.87MB/s(Youtube:不良林), server: 36.134.154.119, port: 65082, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇺🇸 美国-1.63MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活7天)香港-3.10MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇦🇺 澳大利亚-384.0KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇨🇳 中国-233.0KB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65028, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-2.55MB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-8.98MB/s(Youtube:不良林), server: 36.134.154.119, port: 65082, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
   - {name: 🇨🇳 中国-2.06MB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65083, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
   - {name: 🇨🇳 中国-3.52MB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65027, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
-  - {name: 🇯🇵 日本-2.03MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-1.71MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇯🇵 日本-1.62MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-631.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-362.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-3.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-384.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-631.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-362.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-3.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-384.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,50 +52,51 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-631.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-362.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-3.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-384.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活7天)香港-3.10MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-631.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-362.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-3.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-384.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-631.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-362.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-3.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-384.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +104,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-631.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-362.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-3.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-384.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +129,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-631.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-362.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-3.10MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-384.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
