--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.63MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 (已存活7天)香港-3.10MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇦🇺 澳大利亚-384.0KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇨🇳 中国-233.0KB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65028, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-2.55MB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-8.98MB/s(Youtube:不良林), server: 36.134.154.119, port: 65082, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇨🇳 中国-2.06MB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65083, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-3.52MB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65027, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
-  - {name: 🇯🇵 日本-1.71MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-1.62MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-264.0KB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-2.42MB/s(Youtube:不良林), server: 111.45.22.136, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-5.18MB/s(Youtube:不良林), server: 36.134.156.5, port: 65083, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-759.3KB/s(Youtube:不良林), server: 36.134.154.119, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇯🇵 日本-541.8KB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇳 中国-439.3KB/s(Youtube:不良林), server: 120.233.150.146, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇬🇧 英国-1.11MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇬🇧 英国-1.05MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-351.8KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-421.3KB/s(Youtube:不良林), server: 89.31.126.31, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-3.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-384.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-264.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-759.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-541.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-351.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-421.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-3.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-384.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-264.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-759.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-541.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-351.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-421.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-3.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-384.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-264.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-759.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-541.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-351.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-421.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活7天)香港-3.10MB/s(Youtube:不良林)
+      - 🇭🇰 香港-351.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-3.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-384.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-264.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-759.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-541.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-351.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-421.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-3.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-384.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-264.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-759.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-541.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-351.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-421.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-3.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-384.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-264.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-759.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-541.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-351.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-421.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
-      - 🇭🇰 (已存活7天)香港-3.10MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-384.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.71MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-264.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-759.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-541.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-439.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-351.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-421.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
