--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-264.0KB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-2.42MB/s(Youtube:不良林), server: 111.45.22.136, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-5.18MB/s(Youtube:不良林), server: 36.134.156.5, port: 65083, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-759.3KB/s(Youtube:不良林), server: 36.134.154.119, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇯🇵 日本-541.8KB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇳 中国-439.3KB/s(Youtube:不良林), server: 120.233.150.146, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇬🇧 英国-1.11MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇬🇧 英国-1.05MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-351.8KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-421.3KB/s(Youtube:不良林), server: 89.31.126.31, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-1.01MB/s(Youtube:不良林), server: 36.134.154.119, port: 65082, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇺🇸 美国-484.5KB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇭🇰 香港-3.80MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-904.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-4.49MB/s(Youtube:不良林), server: 36.134.156.5, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇸🇬 新加坡-1.00MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-725.4KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-505.7KB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇸🇬 新加坡-1.13MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-264.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-759.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-541.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-439.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-351.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-421.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-484.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-904.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-725.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-505.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-264.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-759.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-541.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-439.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-351.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-421.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-484.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-904.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-725.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-505.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-264.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-759.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-541.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-439.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-351.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-421.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-484.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-904.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-725.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-505.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-351.8KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.80MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-264.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-759.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-541.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-439.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-351.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-421.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-484.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-904.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-725.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-505.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-264.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-759.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-541.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-439.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-351.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-421.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-484.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-904.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-725.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-505.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-264.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-759.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-541.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-439.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-351.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-421.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-484.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-904.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-725.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-505.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-264.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-759.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-541.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-439.3KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.05MB/s(Youtube:不良林)
-      - 🇭🇰 香港-351.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-421.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-484.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-904.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-725.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-505.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
